--- a/src/index.css
+++ b/src/index.css
@@ -174,3 +174,72 @@ body {
   transition: 200ms;
   cursor: pointer;
 }
+
+
+
+/* login form */
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
+  background-color: #85C7F2;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 2px black solid;
+}
+
+.login-form-title {
+  margin-bottom: 2rem;
+}
+
+.login-input-field {
+  border-radius: 1rem;
+  border: 2px solid black;
+  padding: 0.8rem;
+  width: 80%;
+  margin-bottom: 2rem;
+}
+
+.login-label {
+  align-self: flex-start;
+  margin-left: 10%;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.form-submit-button {
+  width: 80px;
+  height: 40px;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  color: #85C7F2;
+  background-color: black;
+  font-size: 1.2rem;
+  font-weight: 900;
+  letter-spacing: 0.1rem;
+}
+
+.form-submit-button:hover {
+  scale: 1.05;
+  transition: 200ms;
+  cursor: pointer;
+}
+
+.error-message-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
+  background-color: red;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 2px black solid;
+}
+
+.error-message-li {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
