--- a/src/index.css
+++ b/src/index.css
@@ -178,7 +178,7 @@ body {
 
 
 /* login form */
-.login-form {
+.login-form, .register-form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -202,7 +202,7 @@ body {
   margin-bottom: 2rem;
 }
 
-.login-label {
+.input-label {
   align-self: flex-start;
   margin-left: 10%;
   font-weight: bold;
@@ -210,9 +210,8 @@ body {
 }
 
 .form-submit-button {
-  width: 80px;
   height: 40px;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   border-radius: 1rem;
   color: #85C7F2;
   background-color: black;
@@ -242,4 +241,9 @@ body {
 .error-message-li {
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+/* register form */
+.register-form-title {
+  margin-bottom: 2rem;
 }
