--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,14 @@ body {
 .postcard {
   margin-top: 3rem;
   background-color: #85C7F2;
-  padding: 1rem;
+  padding: 2rem 1rem;
   border-radius: 1rem;
   border: 2px black solid;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .postcard-username {
@@ -52,16 +57,6 @@ body {
   margin-top: 5px;
   font-style: italic;
   margin-bottom: 2px;
-}
-
-.postcard-top {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  width: 300px;
-  border-radius: 1rem;
-  padding: 0.5rem;
 }
 
 .postcard-span {
@@ -100,7 +95,7 @@ body {
   padding: 0.5rem;
   border-radius: 1rem;
   background-color: black;
-  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .comment-like-button-link:hover {
@@ -121,7 +116,6 @@ body {
 /* delete button */
 .delete-button {
   background-color: black;
-  margin-left: 5px;
   height: 40px;
   padding: 0.5rem;
   border-radius: 1rem;
@@ -246,4 +240,48 @@ body {
 /* register form */
 .register-form-title {
   margin-bottom: 2rem;
+}
+
+
+/* single post page */
+.single-post-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.write-comment-section {
+  margin-top: 1rem;
+  background-color: #85C7F2;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 2px black solid;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#post-comment-title {
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.post-comment-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.create-comment-textarea {
+  width: 90%;
+  border-radius: 1rem;
+  border: 2px solid black;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
 }
