--- a/src/index.css
+++ b/src/index.css
@@ -244,6 +244,13 @@ body {
 
 
 /* single post page */
+#single-post-loading {
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
 .single-post-container {
   display: flex;
   align-items: center;
@@ -283,5 +290,48 @@ body {
   border-radius: 1rem;
   border: 2px solid black;
   padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.comments-section {
+  padding: 1rem;
+  background-color: #85C7F2;
+  border-radius: 1rem;
+  border: 2px solid black;
+  width: 300px;
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.individual-comment {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 1rem;
+  border: 2px solid black;
+  margin-bottom: 1rem;
+  width: 95%;
+}
+
+#comment-username {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin: 0;
+}
+
+#comment-time {
+  margin-top: 5px;
+  font-style: italic;
+  margin-bottom: 2px;
+}
+
+#comment-body {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+#last-comment-span {
   margin-bottom: 1rem;
 }
