--- a/src/index.css
+++ b/src/index.css
@@ -410,7 +410,7 @@ body {
 .navbar-left {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 #navbar-title {
@@ -484,12 +484,16 @@ body {
   font-weight: bold;
   margin-top: 4rem;
   margin-bottom: 4rem;
+  text-align: center;
 }
 
 #not-found-text {
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 4rem;
+  text-align: center;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .home-button {
